<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">合室</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- 加载 -->
    <string name="logining">加载中...</string>
    <string name="searching">合室搜索</string>
    <string name="write_inspiration">写灵感</string>
    <string name="make_question">提问</string>
    <string name="make_kinds">分类</string>
    <string name="back">返回</string>
    <string name="write_letter">写信</string>

    <!-- 提问界面三个选项 -->
    <string name="special">专辑</string>
    <string name="new_answer">最新回答</string>
    <string name="new_question">最新提问</string>

    <!-- 主界面： 按钮选项 -->
    <string name="inspiration">灵感</string>
    <string name="strategy">攻略</string>
    <string name="designer">设计师</string>

    <!-- 主界面：侧滑栏 -->
    <string name="my_secret_message">我的私信</string>
    <string name="my_inspirations">我的灵感库</string>
    <string name="my_cares">我的关注</string>
    <string name="night_mode">夜间模式</string>
    <string name="set_msg">消息设置</string>
    <string name="username_psw">帐号和密码</string>
    <string name="help_and_sug">帮助与反馈</string>
    <string name="quit_login">退出登录</string>

    <!-- 写灵感的界面 -->
    <string name="under">弹下</string>
    <string name="cancel">取消</string>
    <string name="check">确定</string>
    <string name="picture">图片</string>
    <string name="camera">相机</string>

    <!-- 我的灵感库界面 -->


    <!-- 消息设置界面 -->


    <!-- 帮助与反馈界面 -->


    <!-- 登录、注册界面 -->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="telephone_num">手机号</string>
    <string name="email">邮箱</string>
    <string name="weixin">微信</string>
    <string name="qq">QQ</string>
    <string name="weibo">微博</string>
    <string name="password">密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="registered">完成注册</string>
    <string name="username">用户名</string>
    <string name="the_code">验证码</string>
    <string name="get_commit">获取验证短信</string>
    <string name="register_to_login">我有帐号，我要登录</string>
    <string name="please_send_user_psw">请输入帐号或者密码！</string>
    <string name="please_send_thecode_first">请先输入验证码！</string>
    <string name="please_get_thecode_first">请先获取验证码！</string>
    <string name="thecode_iswrong">验证码错误！</string>
    <string name="please_send_phone_first">请先输入手机号！</string>
    <string name="please_send_phone_again">手机号码格式错误，请重新输入！</string>
    <string name="please_send_psw_again">密码为6-20的数字与字母组合，请重新输入！</string>
    <string name="get_code_again">重新获取</string>

    <!-- 验证身份界面 -->
    <string name="authenticate">验证身份</string>
    <string name="updata_psw">修改密码</string>
    <string name="updata_phone">修改手机号</string>
    <string name="new_psw">新密码</string>
    <string name="done">完成</string>
    <string name="please_send_login_psw">输入登录密码</string>
    <string name="please_send_new_phone">请输入新手机号</string>
    <string name="auth_cancel">授权操作已取消</string>
    <string name="auth_error">授权操作遇到错误，请阅读Logcat输出</string>

    <!-- 网络问题 -->
    <string name="check_connection">无可用网络连接，请检查网络设置！</string>

</resources>