<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    android:orientation="vertical" >

    <include layout="@layout/main_title" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/strategy_special"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/special"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/strategy_new_answer"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_answer"
            android:textColor="@color/brown"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/strategy_new_question"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_question"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <ListView
        android:id="@+id/strategy_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/write"
        android:dividerHeight="10dip"
        android:padding="20dip"
        android:scrollbars="none" >
    </ListView>

</LinearLayout>