<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    android:orientation="vertical" >

    <include layout="@layout/action_bar_main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <EditText
        android:id="@+id/login_telephone_et"
        android:layout_width="@dimen/login_et_width"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:hint="@string/telephone_num"
        android:singleLine="true"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/login_password_et"
        android:layout_width="@dimen/login_et_width"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="14sp" />

    <Button
        android:id="@+id/login_done"
        android:layout_width="@dimen/login_et_width"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dip"
        android:text="@string/login" />

    <RelativeLayout
        android:layout_width="@dimen/login_et_width"
        android:layout_height="50dip"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:id="@+id/login_to_register"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/register" />

        <TextView
            android:id="@+id/login_forget_psw"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="@string/forget_psw" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#cccccc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="第三方登录"
            android:textColor="#2a2a2a" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="#cccccc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp" >

        <ImageView
            android:id="@+id/login_weibo"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/weibo" />

        <ImageView
            android:id="@+id/login_qq"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/qq" />

        <ImageView
            android:id="@+id/login_wx"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:src="@drawable/weixin" />
    </LinearLayout>

</LinearLayout>