<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/write"
    android:orientation="vertical" >

    <include layout="@layout/action_bar_main" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_email_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/email"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/accout_email_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="boss@mail.com"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_phone_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/telephone_num"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/accout_phone_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="133****6160"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_psw_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/updata_psw"
            android:textColor="@color/black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="25dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ico_next" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/write" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_weixin_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weixin"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/accout_weixin_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="绑定"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_qq_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/qq"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/accout_qq_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="取消绑定"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

    <RelativeLayout
        android:id="@+id/accout_weibo_btn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:paddingLeft="15dip"
        android:paddingRight="15dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/weibo"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/accout_weibo_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center"
            android:text="绑定"
            android:textColor="@color/black" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black" />

</LinearLayout>